# relations

./: .gitignore  Cargo.toml  LICENSE  release.toml
.github/workflows/: release.yaml
src/: commands.rs  databases.rs  main.rs
src/commands/: cli.rs  generate.rs
src/configs/: config.rs
src/databases/: database.rs  mysql.rs
src/databases/mysql/: query.rs
